fix(lang-python): address DM_NUMBER_CTOR