@@ -37,7 +37,7 @@ import com.sap.psr.vulas.shared.util.StringUtil;
  * <p>Python3FileAnalyzer class.</p>
  *
  */
-public class Python3FileAnalyzer extends Python3BaseListener implements FileAnalyzer {  
+public class Python3FileAnalyzer extends Python3BaseListener implements FileAnalyzer {
 
 	private final static Log log = LogFactory.getLog(Python3FileAnalyzer.class);
 
@@ -72,7 +72,7 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 	public Python3FileAnalyzer() {
 		super();
 	}
-	
+
 	/**
 	 * Sets context information in case an {@link InputStream} is parsed using {@link Python3FileAnalyzer#getConstructs(InputStream)}.
 	 * In this case, package and module information cannot be obtained from the file and file system.
@@ -86,12 +86,12 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 		if(_pack!=null){
 			this.context.push(_pack);
 			this.constructs.put(_pack, new Construct(_pack, ""));
-		}		
+		}
 		this.context.push(_module);
-		this.module = _module;		
-		this.constructs.put(module, new Construct(module, ""));	
+		this.module = _module;
+		this.constructs.put(module, new Construct(module, ""));
 	}
-	
+
 	/** {@inheritDoc} */
 	@Override
 	public boolean canAnalyze(File _file) {
@@ -165,7 +165,7 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 		// Happens if method or function name is 'async', due to the Python grammar's problem with the ASYNC keyword, cf. testPythonFileWithAsync
 		if(ctx.NAME()==null)
 			throw new IllegalStateException("Parser error: Construct without name in context " + this.context + ", line [" + ctx.getStart().getLine() + "]");
-		
+
 		PythonId id;
 		String name = ctx.NAME().toString();
 		String args = ctx.parameters().getText();
@@ -206,7 +206,7 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 	}
 
 	/**
-	 * 
+	 *
 	 * @param _name
 	 * @return
 	 */
@@ -217,10 +217,10 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 			this.countPerContext.put(ctx, new HashMap<String, Integer>());
 
 		if(this.countPerContext.get(ctx).get(_name)==null)
-			this.countPerContext.get(ctx).put(_name, new Integer(0));
+			this.countPerContext.get(ctx).put(_name, Integer.valueOf(0));
 
 		int count = this.countPerContext.get(ctx).get(_name).intValue();
-		this.countPerContext.get(ctx).put(_name, new Integer(++count));
+		this.countPerContext.get(ctx).put(_name, Integer.valueOf(++count));
 
 		if(count==1)
 			return _name;
@@ -233,7 +233,7 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 	public boolean containsConstruct(ConstructId _id) throws FileAnalysisException {
 		return this.constructs.containsKey(_id);
 	}
-	
+
 	/**
 	 * Maybe promote this method, which uses the shared type as argument, to the interface.
 	 * Alternatively, make all core-internal interfaces work with core types, not with shared
@@ -272,7 +272,7 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 		final Python3Parser parser = new Python3Parser(tokens);
 		final ParseTree root = parser.file_input();
 		final ParseTreeWalker walker = new ParseTreeWalker();
-		
+
 		try {
 			walker.walk(this, root);
 		}
@@ -288,17 +288,17 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 					b.append(stmt);
 			this.constructs.get(this.module).setContent(b.toString());
 		}
-		
+
 		return this.constructs;
 	}
-	
+
 	/** {@inheritDoc} */
 	@Override
 	public Map<ConstructId, Construct> getConstructs() throws FileAnalysisException {
 		if(this.constructs==null) {
 			try {
 				this.constructs = new TreeMap<ConstructId, Construct>();
-				
+
 				// Create module and add to constructs
 				this.module = PythonFileAnalyzer.getModule(this.file);
 				this.constructs.put(this.module, new Construct(this.module, ""));
@@ -312,7 +312,7 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 				if(pack!=null)
 					this.context.push(pack);
 				this.context.push(module);
-				
+
 				// Parse the file
 				log.debug("Parsing [" + this.file + "]");
 				try(FileInputStream fis = new FileInputStream(this.file)) {
@@ -328,19 +328,19 @@ public class Python3FileAnalyzer extends Python3BaseListener implements FileAnal
 		}
 		return this.constructs;
 	}
-	
+
 	/** {@inheritDoc} */
 	@Override
 	public boolean hasChilds() {
 		return false;
 	}
-	
+
 	/** {@inheritDoc} */
 	@Override
 	public Set<FileAnalyzer> getChilds(boolean _recursive) {
 		return null;
 	}
-	
+
 	/** {@inheritDoc} */
 	@Override
 	public String toString() {
